bakkie_derive/tests/ui/fail/app_attribute_on_complex_path.stderr
error: Parameter with #[app] attribute must be of type App<T>
 --> tests/ui/fail/app_attribute_on_complex_path.rs:4:48
  |
4 | async fn my_tool(#[app] app: std::collections::HashMap<String, i32>) -> Result<String, String> {
  |                                                ^^^^^^^
